# OpenStaticAnalyzer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Analyzer/: CMakeLists.txt
Analyzer/Licenses/: EXPRTK-LICENSE.txt  SONARQUBE-LICENSE.txt
Analyzer/common/: CMakeLists.txt
Analyzer/common/TagMetadata/: CMakeLists.txt  cwe_metadata.md  general_metadata.md  owasp_metadata.md  sei_cert_metadata.md
Analyzer/cpp/: CMakeLists.txt
Analyzer/cpp/demo/: analyze.bat  analyze.sh  build.sh  softfilter-linux  softfilter-windows
Analyzer/csharp/: CMakeLists.txt
Analyzer/csharp/demo/: analyze.bat  analyze.sh  hardfilter  softfilter
Analyzer/doc/md/: UserDefinedMetricsRef.md  UserDefinedPatternsRef.md
Analyzer/doc/style/: Analyzer.css
Analyzer/java/: CMakeLists.txt
Analyzer/java/Licenses/: SLF4J-LICENSE.txt
Analyzer/java/demo/: analyze-ant.bat  analyze-ant.sh  analyze-dir.bat  analyze-dir.sh  build-ant.bat
Analyzer/javascript/: CMakeLists.txt
Analyzer/javascript/demo/: analyze.bat  analyze.sh
Analyzer/python/: CMakeLists.txt
Analyzer/python/Licenses/: ANTLR-LICENSE.txt
Analyzer/python/demo/: analyze.bat  analyze.sh  filter_linux.txt
OpenStaticAnalyzer/: CMakeLists.txt
OpenStaticAnalyzer/cpp/: CMakeLists.txt
OpenStaticAnalyzer/cpp/demo/: analyze.bat  analyze.sh  build-win-x64.bat  build.sh
OpenStaticAnalyzer/csharp/: CMakeLists.txt
OpenStaticAnalyzer/csharp/demo/: analyze.bat  analyze.sh
OpenStaticAnalyzer/doc/: readme.txt
OpenStaticAnalyzer/doc/md/: UserDefinedMetricsRef.md  UserDefinedPatternsRef.md
OpenStaticAnalyzer/doc/style/: OpenStaticAnalyzer.css
OpenStaticAnalyzer/java/: CMakeLists.txt
OpenStaticAnalyzer/java/Licenses/: GUESSENCODING-NOTICE  MAVEN-WRAPPER-LICENSE.txt
OpenStaticAnalyzer/java/demo/: SoftFilter.txt  analyze-ant.bat  analyze-ant.sh  analyze-dir.bat  analyze-dir.sh  analyze-maven.bat  analyze-maven.sh  build-ant.bat  build-ant.sh  build-maven.bat  build-maven.sh  fbfilelist.txt
OpenStaticAnalyzer/javascript/: CMakeLists.txt
OpenStaticAnalyzer/javascript/demo/: analyze.bat  analyze.sh
OpenStaticAnalyzer/python/: CMakeLists.txt
OpenStaticAnalyzer/python/demo/: analyze.bat  analyze.sh  filter_win.txt
cl/CAN/: CMakeLists.txt
cl/CAN/src/: main.cpp
cl/CAN2Lim/: CMakeLists.txt
cl/CAN2Lim/inc/: ASTConversionInfo.h  ASTVisitor.h  CommentProcessor.h  Linker.h  MergeUID.h  clangHelpers.h  messages.h
cl/CAN2Lim/src/: ASTConversionInfo.cpp  ASTVisitor.cpp  CommentProcessor.cpp  Linker.cpp  MergeUID.cpp  clangHelpers.cpp  main.cpp
cl/CANLink/: CMakeLists.txt
cl/CANLink/inc/: messages.h
cl/CANLink/src/: main.cpp
cl/ClangTidy2Graph/: CMakeLists.txt  ClangTidy.rul  ClangTidy.rul.md  ClangTidy.rul_metadata.md  rules.csv
cl/ClangTidy2Graph/inc/: ResultConverter.h  defines.h  messages.h
cl/ClangTidy2Graph/src/: ResultConverter.cpp  main.cpp
cl/DCF-CPP/: CMakeLists.txt
cl/DCF-CPP/inc/: AbstractFilter.h  Aligner.h  CPPNamedVisitor.h  CloneLengthFilter.h  CloneOccuranceFilter.h  ClonePositioned.h  Config.h  CppSerializeAST.h  DistanceVisitor.h  Interval.h  LanguageFactory.h  RepeatingLinesFilter.h  StatementFilter.h  Types.h  dcm.h  messages.h
cl/DCF-CPP/src/: AbstractFilter.cpp  CloneLengthFilter.cpp  ClonePositioned.cpp  CppSerializeAST.cpp  LanguageFactory.cpp  RepeatingLinesFilter.cpp  StatementFilter.cpp  dcm.cpp  main.cpp
cl/DuplicatedCodeFinder/: CMakeLists.txt  DCF.rul  DCF.rul.md
cl/DuplicatedCodeFinder/inc/: AbstractFilter.h  Aligner.h  CloneLengthFilter.h  CloneOccuranceFilter.h  ClonePositioned.h  CloneVisitorBase.h  Config.h  CoverageVisitorBase.h  DistanceVisitor.h  Interval.h  JCoverageVisitor.h  LanguageFactory.h  NamedVisitor.h  RepeatingLinesFilter.h  StatementFilter.h  common.h  dcm.h  messages.h  types.h
cl/DuplicatedCodeFinder/src/: AbstractFilter.cpp  CSCoverageVisitor.cpp  CSNodeEmbeddednessVisitor.cpp  CloneLengthFilter.cpp  ClonePositioned.cpp  CloneVisitorBase.cpp  CoverageVisitorBase.cpp  JCoverageVisitor.cpp  JNodeEmbeddednessVisitor.cpp  JSCoverageVisitor.cpp  JSNodeEmbeddedVisitor.cpp  LanguageFactory.cpp  PNodeEmbeddednessVisitor.cpp  RepeatingLinesFilter.cpp  StatementFilter.cpp  common.cpp  dcm.cpp  main.cpp
cl/ESLint2Graph/: CMakeLists.txt  ESLint.rul  TSLint.rul  TSLint.rul.md  TSLint.rul_metadata.md
cl/ESLint2Graph/inc/: ResultConverter.h  RuleConverter.h  XMLParser.h  defines.h  messages.h
cl/ESLint2Graph/src/: ResultConverter.cpp  RuleConverter.cpp  XMLParser.cpp  main.cpp
cl/FxCop2Graph/: CMakeLists.txt  FxCop.rul  FxCop.rul.md  FxCop.rul_metadata.md
cl/FxCop2Graph/Rules/: Microsoft.FxCop.Rules.ASP.MVC.Security.ASPMvcSecurityRules.xml  Microsoft.FxCop.Rules.ASP.Security.ASPSecurityRules.xml  Microsoft.FxCop.Rules.ASP.Security.Configuration.AspNetConfigurationSecurityRules.xml  Microsoft.FxCop.Rules.Design.DesignRules.xml  Microsoft.FxCop.Rules.Globalization.GlobalizationRules.xml  Microsoft.FxCop.Rules.Interoperability.InteroperabilityRules.xml  Microsoft.FxCop.Rules.Maintainability.MaintainabilityRules.xml  Microsoft.FxCop.Rules.Mobility.MobilityRules.xml  Microsoft.FxCop.Rules.Naming.NamingRules.xml  Microsoft.FxCop.Rules.Performance.PerformanceRules.xml  Microsoft.FxCop.Rules.Portability.PortabilityRules.xml  Microsoft.FxCop.Rules.Reliability.ReliabilityRules.xml  Microsoft.FxCop.Rules.RulesAssemblyFriendlyName.xml  Microsoft.FxCop.Rules.Usage.UsageRules.xml  (+2 more)
cl/JAN2ChangePath/: CMakeLists.txt  main.cpp  messages.h
cl/JAN2Lim/: CMakeLists.txt
cl/JANFilter/: CMakeLists.txt  main.cpp  messages.h
cl/JANLink/: CMakeLists.txt
cl/JSAN2ChangePath/: CMakeLists.txt
cl/JSAN2Lim/: CMakeLists.txt
cl/LIM2Metrics/: CMakeLists.txt  MET.rul  MET.rul.md  main.cpp  messages.h
cl/LIM2Patterns/: .gitignore  CMakeLists.txt
cl/MetricHunter/: CMakeLists.txt  MetricHunter_CPP.threshold  MetricHunter_CSHARP.threshold  MetricHunter_JAVA.threshold  MetricHunter_JAVASCRIPT.threshold  MetricHunter_PYTHON.threshold
cl/OpenStaticAnalyzerCPP/: CMakeLists.txt  rules_cpp.csv
cl/OpenStaticAnalyzerPython/: CMakeLists.txt  rules_python.csv
(+3744 files in other folders)
